[FRONTEND] Switch details to tables

--- a/frontend/war-ministry-frontend/src/app/cv-details/cv-details.component.html
+++ b/frontend/war-ministry-frontend/src/app/cv-details/cv-details.component.html
@@ -4,79 +4,161 @@ Status: unknown
 
 <ul>
     <li>CV Details
-        <ul>
-            <li>Full Name: TEST</li>
-            <li>Date of Birth: TEST</li>
-            <li>Nationality: TEST</li>
-            <li>Email: TEST</li>
-            <li>Phone: TEST</li>
-            <li>Address: TEST</li>
-        </ul>
+        <table>
+            <tr>
+                <td>Full Name</td>
+                <td>TEST</td>
+            </tr>
+            <tr>
+                <td>Date of Birth</td>
+                <td>TEST</td>
+            </tr>
+            <tr>
+                <td>Nationality</td>
+                <td>TEST</td>
+            </tr>
+            <tr>
+                <td>Email</td>
+                <td>TEST</td>
+            </tr>
+            <tr>
+                <td>Phone</td>
+                <td>TEST</td>
+            </tr>
+            <tr>
+                <td>Address</td>
+                <td>TEST</td>
+            </tr>
+        </table>
     </li>
 
     <li>Education
-        <ul>
-            <li>Edu
-                <ul>
-                    <li>Degree: TEST</li>
-                    <li>Institution: TEST</li>
-                    <li>Start Date: TEST</li>
-                    <li>End Date: TEST</li>
-                    <li>Field of Study: TEST</li>
-                </ul>
-            </li>
-        </ul>
+        <table>
+            <thead>
+                <tr>
+                    <th>Degree</th>
+                    <th>Institution</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
+                    <th>Field of Study</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>TEST1</td>
+                    <td>TEST1</td>
+                    <td>TEST1</td>
+                    <td>TEST1</td>
+                    <td>TEST1</td>
+                </tr>
+                <tr>
+                    <td>TEST2</td>
+                    <td>TEST2</td>
+                    <td>TEST2</td>
+                    <td>TEST2</td>
+                    <td>TEST2</td>
+                </tr>
+            </tbody>
+        </table>
     </li>
 
     <li>Work Experience
-        <ul>
-            <li>Work
-                <ul>
-                    <li>Job Title: TEST</li>
-                    <li>Company: TEST</li>
-                    <li>Start Date: TEST</li>
-                    <li>End Date: TEST</li>
-                </ul>
-            </li>
-        </ul>
+        <table>
+            <thead>
+                <tr>
+                    <th>Job Title</th>
+                    <th>Company</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>TEST1</td>
+                    <td>TEST1</td>
+                    <td>TEST1</td>
+                    <td>TEST1</td>
+                </tr>
+                <tr>
+                    <td>TEST2</td>
+                    <td>TEST2</td>
+                    <td>TEST2</td>
+                    <td>TEST2</td>
+                </tr>
+            </tbody>
+        </table>
     </li>
 
     <li>Skills
         <ul>
-            <li>TEST</li>
+            <li>TEST1</li>
+            <li>TEST2</li>
+            <li>TEST3</li>
+            <li>TEST4</li>
         </ul>
     </li>
 
     <li>Certifications
-        <ul>
-            <li> Certificate
-                <ul>
-                    <li>Name: TEST</li>
-                    <li>Issuing Organization: TEST</li>
-                </ul>
-            </li>
-            
-        </ul>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Issuing Organization</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>TEST</td>
+                    <td>TEST</td>
+                </tr>
+            </tbody>
+        </table>
     </li>
 
     <li>Languages
-        <ul>
-            <li>Language
-                <ul>
-                    <li>Language: TEST</li>
-                    <li>Proficiency: TEST</li>
-                </ul>
-            </li>
-        </ul>
+        <table>
+            <thead>
+                <tr>
+                    <th>Language</th>
+                    <th>Proficiency</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>TEST</td>
+                    <td>TEST</td>
+                </tr>
+            </tbody>
+        </table>
     </li>
 
     <li>Military Experience
-        <ul>
-            <li>Rank: TEST</li>
-            <li>Branch: TEST</li>
-            <li>Start Date: TEST</li>
-            <li>End Date: TEST</li>
-            <li>Duties: TEST</li>
-        </ul>
+        <table>
+            <thead>
+                <tr>
+                    <th>Rank</th>
+                    <th>Branch</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
+                    <th>Duties</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>TEST1</td>
+                    <td>TEST1</td>
+                    <td>TEST1</td>
+                    <td>TEST1</td>
+                    <td>TEST1</td>
+                </tr>
+                <tr>
+                    <td>TEST2</td>
+                    <td>TEST2</td>
+                    <td>TEST2</td>
+                    <td>TEST2</td>
+                    <td>TEST2</td>
+                </tr>
+            </tbody>
+        </table>
     </li>
 </ul>
