--- a/frontend/war-ministry-frontend/src/app/hr-dashboard/hr-dashboard.component.html
+++ b/frontend/war-ministry-frontend/src/app/hr-dashboard/hr-dashboard.component.html
@@ -17,8 +17,9 @@
             </mat-card-title>
           </mat-card-header>
           <mat-card-content class="dashboard-card-content">
-            <div>Card Content Here</div>
+            <div>Sekcja w budowie</div>
           </mat-card-content>
+          <img mat-card-image src="./assets/bob.jpg">
         </mat-card>
       </mat-grid-tile>
     }
