--- a/frontend/war-ministry-frontend/src/app/cv-table/cv-table.component.html
+++ b/frontend/war-ministry-frontend/src/app/cv-table/cv-table.component.html
@@ -15,7 +15,7 @@
     <!-- Date Received Column -->
     <ng-container matColumnDef="date_received">
       <th mat-header-cell *matHeaderCellDef>Date received</th>
-      <td mat-cell *matCellDef="let row">{{row.date_received}}</td>
+      <td mat-cell *matCellDef="let row">{{row.date_received.toLocaleString()}}</td>
     </ng-container>
 
     <!-- Position Applied Column -->
