[FRONTEND] Translate back

--- a/frontend/war-ministry-frontend/src/app/cv-details/cv-details.component.html
+++ b/frontend/war-ministry-frontend/src/app/cv-details/cv-details.component.html
@@ -1,46 +1,46 @@
-Status: unknown
-<button matButton="elevated">Accept</button>
-<button matButton="elevated">Reject</button>
+Status: nieznany
+<button matButton="elevated">Akceptuj</button>
+<button matButton="elevated">Odrzuć</button>
 
 <ul>
-    <li>CV Details
+    <li>Szczegóły CV
         <table>
             <tr>
-                <td>Full Name</td>
+                <td>Imię i nazwisko</td>
                 <td>TEST</td>
             </tr>
             <tr>
-                <td>Date of Birth</td>
+                <td>Data urodzenia</td>
                 <td>TEST</td>
             </tr>
             <tr>
-                <td>Nationality</td>
+                <td>Narodowość</td>
                 <td>TEST</td>
             </tr>
             <tr>
-                <td>Email</td>
+                <td>Adres e-mail</td>
                 <td>TEST</td>
             </tr>
             <tr>
-                <td>Phone</td>
+                <td>Numer telefonu</td>
                 <td>TEST</td>
             </tr>
             <tr>
-                <td>Address</td>
+                <td>Adres zamieszkania</td>
                 <td>TEST</td>
             </tr>
         </table>
     </li>
 
-    <li>Education
+    <li>Edukacja
         <table>
             <thead>
                 <tr>
-                    <th>Degree</th>
-                    <th>Institution</th>
-                    <th>Start Date</th>
-                    <th>End Date</th>
-                    <th>Field of Study</th>
+                    <th>Stopień</th>
+                    <th>Instytucja</th>
+                    <th>Data rozpoczęcia</th>
+                    <th>Data ukończenia</th>
+                    <th>Dziedzina</th>
                 </tr>
             </thead>
             <tbody>
@@ -62,14 +62,14 @@ Status: unknown
         </table>
     </li>
 
-    <li>Work Experience
+    <li>Doświadczenie zawodowe
         <table>
             <thead>
                 <tr>
-                    <th>Job Title</th>
-                    <th>Company</th>
-                    <th>Start Date</th>
-                    <th>End Date</th>
+                    <th>Stanowisko</th>
+                    <th>Pracodawca</th>
+                    <th>Data rozpoczęcia</th>
+                    <th>Data zakończenia</th>
                 </tr>
             </thead>
             <tbody>
@@ -98,12 +98,12 @@ Status: unknown
         </ul>
     </li>
 
-    <li>Certifications
+    <li>Certyfikaty
         <table>
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Issuing Organization</th>
+                    <th>Nazwa</th>
+                    <th>Organizacja wystawiająca</th>
                 </tr>
             </thead>
             <tbody>
@@ -115,12 +115,12 @@ Status: unknown
         </table>
     </li>
 
-    <li>Languages
+    <li>Języki
         <table>
             <thead>
                 <tr>
-                    <th>Language</th>
-                    <th>Proficiency</th>
+                    <th>Język</th>
+                    <th>Poziom</th>
                 </tr>
             </thead>
             <tbody>
@@ -132,15 +132,15 @@ Status: unknown
         </table>
     </li>
 
-    <li>Military Experience
+    <li>Doświadczenie wojskowe
         <table>
             <thead>
                 <tr>
-                    <th>Rank</th>
-                    <th>Branch</th>
-                    <th>Start Date</th>
-                    <th>End Date</th>
-                    <th>Duties</th>
+                    <th>Ranga</th>
+                    <th>Gałąź</th>
+                    <th>Data rozpoczęcia</th>
+                    <th>Data zakończenia</th>
+                    <th>Obowiązki</th>
                 </tr>
             </thead>
             <tbody>
