--- a/frontend/war-ministry-frontend/src/app/navbar/navbar.component.html
+++ b/frontend/war-ministry-frontend/src/app/navbar/navbar.component.html
@@ -20,7 +20,7 @@
           <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
         </button>
       }
-      <span>War Ministry Hiring System</span>
+      <span>Ministerstwo Wojny - System Rekrutacji XXL</span>
     </mat-toolbar>
       <router-outlet />
   </mat-sidenav-content>
