--- a/frontend/war-ministry-frontend/src/app/cv-details/cv-details.component.html
+++ b/frontend/war-ministry-frontend/src/app/cv-details/cv-details.component.html
@@ -21,7 +21,7 @@ Status: nieznany
 
   <mat-grid-tile colspan="3">
     <mat-card>
-      <mat-card-title>Education</mat-card-title>
+      <mat-card-title>Edukacja</mat-card-title>
       <mat-card-content>
         <mat-list>
           <mat-list-item *ngFor="let edu of cv.education">
@@ -38,7 +38,7 @@ Status: nieznany
 
   <mat-grid-tile colspan="3">
     <mat-card>
-      <mat-card-title>Work Experience</mat-card-title>
+      <mat-card-title>Doświadczenie zawodowe</mat-card-title>
       <mat-card-content>
         <mat-list>
           <mat-list-item *ngFor="let w of cv.workExperience">
@@ -55,7 +55,7 @@ Status: nieznany
 
   <mat-grid-tile colspan="1">
     <mat-card>
-      <mat-card-title>Skills</mat-card-title>
+      <mat-card-title>Umiejętności</mat-card-title>
       <mat-card-content>
         <mat-chip-set>
           <mat-chip *ngFor="let skill of cv.skills">{{ skill }}</mat-chip>
@@ -66,7 +66,7 @@ Status: nieznany
 
   <mat-grid-tile colspan="1">
     <mat-card>
-      <mat-card-title>Languages</mat-card-title>
+      <mat-card-title>Języki</mat-card-title>
       <mat-card-content>
         <mat-list>
           <mat-list-item *ngFor="let lang of cv.languages">
@@ -79,7 +79,7 @@ Status: nieznany
 
   <mat-grid-tile colspan="1">
     <mat-card>
-      <mat-card-title>Certifications</mat-card-title>
+      <mat-card-title>Certyfikaty</mat-card-title>
       <mat-card-content>
         <mat-list>
           <mat-list-item *ngFor="let cert of cv.certifications">
@@ -93,7 +93,7 @@ Status: nieznany
 
   <mat-grid-tile colspan="3">
     <mat-card>
-      <mat-card-title>Military Experience</mat-card-title>
+      <mat-card-title>Doświadczenie wojskowe</mat-card-title>
       <mat-card-content>
         <mat-accordion>
           <mat-expansion-panel *ngFor="let mil of cv.militaryExperience">
