--- a/frontend/war-ministry-frontend/src/app/cv-table/cv-table.component.html
+++ b/frontend/war-ministry-frontend/src/app/cv-table/cv-table.component.html
@@ -1,3 +1,5 @@
+<button matButton="elevated" (click)="onRefreshMail()">Odśwież maile</button>
+
 <div class="mat-elevation-z2">
   <table mat-table class="full-width-table" matSort aria-label="Elements">
     <!-- Id Column -->
