--- a/frontend/war-ministry-frontend/src/app/hr-home/hr-home.component.html
+++ b/frontend/war-ministry-frontend/src/app/hr-home/hr-home.component.html
@@ -4,6 +4,6 @@
 Przyjmowanie zażaleń:<br/>
 EA237<br/>
 Budynek A Wydziału Elektroniki, Telekomunikacji i Informatyki<br/>
-Gdańsk ul. Siedlicka 5a<br/>
+ul. Siedlicka 5a<br/>
 80-233 Gdańsk<br/>
 </div>
