--- a/frontend/war-ministry-frontend/src/app/navbar/navbar.component.html
+++ b/frontend/war-ministry-frontend/src/app/navbar/navbar.component.html
@@ -5,8 +5,12 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/">Home</a>
-      <a mat-list-item routerLink="/cv">CVs</a>
+      <a mat-list-item routerLink="/">Start</a>
+      <a mat-list-item routerLink="/cv">CV</a>
+      <a mat-list-item routerLink="/manage">Zarządzanie</a>
+      <a mat-list-item href="https://wheelofnames.com/tpy-v8b">Nasza metodologia</a>
+      <a mat-list-item routerLink="/delivery">Jedzenie z dostawą</a>
+      <a mat-list-item routerLink="/help">Pomoc</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -20,7 +24,7 @@
           <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
         </button>
       }
-      <span>Ministerstwo Wojny - System Rekrutacji XXL</span>
+      <span class="military-title">Ministerstwo Wojny - System Rekrutacji XXL</span>
     </mat-toolbar>
       <router-outlet />
   </mat-sidenav-content>
