[FRONTEND] CV details

--- a/frontend/war-ministry-frontend/src/app/cv-details/cv-details.component.html
+++ b/frontend/war-ministry-frontend/src/app/cv-details/cv-details.component.html
@@ -1,8 +1,9 @@
-<button matButton="elevated" (click)="onAccept()">Akceptuj</button>
-<button matButton="elevated" (click)="onReject()">Odrzuć</button>
-
   <div class="grid-container">
-    <mat-grid-list cols="4">
+    <button matButton="elevated" (click)="onAccept()">Akceptuj</button>
+    <button matButton="elevated" (click)="onReject()">Odrzuć</button>
+    Punktacja: {{cv.score}}
+
+    <mat-grid-list cols="4" gutterSize="10px">
 
     <mat-grid-tile colspan="2" >
       <mat-card>
