--- a/frontend/war-ministry-frontend/src/app/cv-details/cv-details.component.scss
+++ b/frontend/war-ministry-frontend/src/app/cv-details/cv-details.component.scss
@@ -159,6 +159,7 @@ mat-grid-tile mat-card {
   display: flex;
   flex-direction: column;
   margin: 10px;
+  font-size: 1.2rem;
 }
 
 mat-card-content {
