--- a/frontend/war-ministry-frontend/src/app/cv-table/cv-table.component.html
+++ b/frontend/war-ministry-frontend/src/app/cv-table/cv-table.component.html
@@ -4,31 +4,31 @@
   <table mat-table class="full-width-table" matSort aria-label="Elements">
     <!-- Id Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
       <td mat-cell *matCellDef="let row">{{row.id}}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Imię</th>
       <td mat-cell *matCellDef="let row">{{row.fullName}}</td>
     </ng-container>
 
     <!-- Position Applied Column -->
     <ng-container matColumnDef="position_applied">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Position applied</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pozycja</th>
       <td mat-cell *matCellDef="let row">{{ row.position ? row.position : 'Ja też bym chciał wiedzieć' }}</td>
     </ng-container>
 
     <!-- Score Column -->
     <ng-container matColumnDef="score">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Score</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Punktacja</th>
       <td mat-cell *matCellDef="let row">{{row.score}}</td>
     </ng-container>
 
     <!-- View More Column -->
     <ng-container matColumnDef="view_more">
-      <th mat-header-cell *matHeaderCellDef>Details</th>
+      <th mat-header-cell *matHeaderCellDef>Szczegóły</th>
       <td mat-cell *matCellDef="let row">
         <button matButton="elevated" [routerLink]="['/cv', row.id]">See more</button>
       </td>
