--- a/frontend/war-ministry-frontend/src/app/hr-dashboard/hr-dashboard.component.html
+++ b/frontend/war-ministry-frontend/src/app/hr-dashboard/hr-dashboard.component.html
@@ -21,7 +21,7 @@
 <ng-template #card1>
   <p>Najlepsze ministerstwo!</p>
   <p>Zero udokumentowanych przekroczeń uprawnień!</p>
-  <p>Wcale nie musisz wstydziś się przed rodziną, że tu pracujesz!</p>
+  <p>Wcale nie musisz wstydzić się przed rodziną, że tu pracujesz!</p>
 </ng-template>
 
 <ng-template #card3>
