--- a/frontend/war-ministry-frontend/src/app/cv-details/cv-details.component.html
+++ b/frontend/war-ministry-frontend/src/app/cv-details/cv-details.component.html
@@ -1,7 +1,7 @@
   <div class="grid-container">
     <button matButton="elevated" (click)="onAccept()">Akceptuj</button>
     <button matButton="elevated" (click)="onReject()">Odrzuć</button>
-    Punktacja: {{cv.score}}
+    Punktacja: {{cv.score}} | Pozycja: {{ cv.position ? cv.position : 'Nieznana' }}
 
     <mat-grid-list cols="4" gutterSize="10px">
 
